# flocq

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  Flocq_defs.v  Flocq_rnd_ex.v  INSTALL  INSTALL.md  Makefile.am  NEWS  NEWS.md  README.md  Remakefile.in  _CoqProject  configure.ac  configure.in  dune-project  opam
examples/: Average.v  Axpy.v  Cody_Waite.v  Compute.v  Division_u16.v  Double_round_beta_odd.v  Double_rounding_odd_radix.v  Homogen.v  Sqrt_sqr.v  Triangle.v  average.v
misc/: Dockerfile  ci.md  template.html
src/: Flocq_Raux.v  Flocq_defs.v  Flocq_float_ops.v  Flocq_float_prop.v  Flocq_rnd_FIX.v  Flocq_rnd_FLT.v  Flocq_rnd_FLX.v  Flocq_rnd_FTZ.v  Flocq_rnd_ex.v  Flocq_rnd_generic.v  Flocq_rnd_ne.v  Flocq_rnd_prop.v  Flocq_ulp.v  Flocq_version.v.in  Makefile.am  Version.v.in  dune
src/Appli/: Axpy.v  Fappli_Axpy.v  Fappli_IEEE.v  Fappli_IEEE_bits.v  Fappli_Muller.v  Fappli_double_round.v  Fappli_rnd_odd.v  Fappli_sqrt_FLT_ne.v
src/Calc/: Bracket.v  Div.v  Fcalc_bracket.v  Fcalc_digits.v  Fcalc_div.v  Fcalc_ops.v  Fcalc_round.v  Fcalc_round_FIX.v  Fcalc_round_FLX.v  Fcalc_sqrt.v  Operations.v  Round.v  Sqrt.v
src/Core/: Core.v  Definitions.v  Defs.v  Digits.v  FIX.v  FLT.v  FLX.v  FTZ.v  Fcore.v  Fcore_FIX.v  Fcore_FLT.v  Fcore_FLX.v  Fcore_FTZ.v  Fcore_Raux.v  Fcore_Zaux.v  Fcore_defs.v  Fcore_digits.v  Fcore_float_prop.v  Fcore_generic_fmt.v  Fcore_rnd.v  Fcore_rnd_ne.v  Fcore_ulp.v  Float_prop.v  Generic_fmt.v  Raux.v  Round_NE.v  Round_pred.v  Ulp.v  Zaux.v
src/IEEE754/: Binary.v  BinarySingleNaN.v  Bits.v  Int63Compat.v.in  Int63Copy.v  PrimFloat.v  SpecFloat.v.in  SpecFloatCompat.v.in  SpecFloatCopy.v
src/Pff/: Pff.v  Pff2Flocq.v  Pff2FlocqAux.v
src/PrimitiveFloats/: NativeLayer.v  SpecLayer.v
src/Prop/: Div_sqrt_error.v  Double_rounding.v  Format_REM.v  Fprop_Sterbenz.v  Fprop_div_sqrt_error.v  Fprop_mult_error.v  Fprop_nearest.v  Fprop_plus_error.v  Fprop_relative.v  Mult_error.v  Plus_error.v  Relative.v  Round_odd.v  Sterbenz.v
src/Translate/: Ftranslate_flocq2Pff.v  Missing_theos.v  Pff.v
